# maze-experiment

./: .gitignore  .pre-commit-config.yaml  README.md  dqfd_demo_builder.py  main.py  pyproject.toml  requirements.txt  sac_maze3d_train.py  temp.py  test.pickle  test.py
config/: experiment_base.py  experiment_variants.py  full_config.py  game_base.py  game_variants.py  gui_variants.py  loader.py  reward_strategy.py  sac_base.py  sac_variants.py
game/: arguments.py  experiment.py  game_utils.py  network_config.yaml  updates_scheduler.py  utils.py
game/DemonstrationBuffer/: buffer.npy
game/Demonstration_Buffer/: buffer.npy
game/config/: config_sac_HumanXHuman.yaml  config_sac_Human_data_collect.yaml  config_sac_No_TL.yaml  config_sac_No_TL_agent_only.yaml  config_sac_No_TL_two_agents _2.yaml  config_sac_No_TL_two_agents.yaml  config_sac_evaluation.yaml  network_config.yaml
game/config_dc/: Exp3_PreTrain_Test.yaml
game/demonstration_buffer/: buffer_org.npy
game/experiment/: agent.py  engine.py  engine_v2.py  experiment_bk.py  game_loop.py  trainer.py  utils.py
game/saved_buffers/: buffer_cris.npy  buffer_koutris.npy
maze3D_new/: Maze3DEnvRemote.py
plot_utils/: plot_utils.py
rl_models/: networks_discrete.py  sac_discrete_agent.py  utils.py
rl_models/Policy_Transfer/: _actor.pt  _critic.pt
rl_models/Pretrained/: Expert_model_01_sac_actor  Expert_model_01_sac_critic  PreTrain_model_01_sac_actor  PreTrain_model_01_sac_critic  PreTrain_model_sac_actor  PreTrain_model_sac_critic
rl_models/iql/: agent.py  buffer.py  (+2 more)
utils/: logger.py  settings.py
(+70 files in other folders)
